--- a/Assignment_4/css/developers.css
+++ b/Assignment_4/css/developers.css
@@ -187,10 +187,11 @@ footer {
   border-radius: 12px;  
   display: flex;
   flex-direction: column;
-  padding: 2rem;
+  padding: 0 2rem 2rem 2rem;
   box-shadow: 0 8px 24px rgba(0,0,0,0.8);
   box-sizing: border-box;
   margin: 0 10rem 0 10rem;
+  margin-bottom: 2rem;
 }
 
 .card h2 {
@@ -199,6 +200,7 @@ footer {
   color: #f9a825;
   text-shadow: 0 0 8px #f9a825aa;
   flex-shrink: 0;
+  margin-top: 2rem;
 }
 
 .card img {
@@ -221,7 +223,7 @@ footer {
 }
 
 .card p {
-  font-size: 1.5rem;
+  font-size: 1.8rem;
   line-height: 1.5;
   color: black;
   flex-grow: 1; 
@@ -260,7 +262,6 @@ footer {
   padding: 1rem;
   margin-right: auto;
   margin-bottom: 0;
-  margin-top: 0;
 }
 
 #austine-card button {
@@ -273,7 +274,7 @@ footer {
   padding: 1rem;
   margin-right: auto;
   margin-bottom: 0;
-  margin-top: 0;
+
 }
 
 #emmanuel-card button {
@@ -286,7 +287,6 @@ footer {
   padding: 1rem;
   margin-right: auto;
   margin-bottom: 0;
-  margin-top: 0;
 }
 
 #thiago-card button {
@@ -294,6 +294,59 @@ footer {
   color: white;
 }
 
+#austine-card{
+    height: 90vh;
+}
+
+#emmanuel-card{
+    height: 95vh;
+}
+
+#thiago-card{
+    height: 95vh;
+}
+
+#austine-card h2,
+#emmanuel-card h2,
+#thiago-card h2 {
+  font-size: 2rem;
+  position: relative;
+  display: inline-block;
+}
+
+#austine-card h2::after,
+#austine-card h2::before,
+#emmanuel-card h2::after,
+#emmanuel-card h2::before,
+#thiago-card h2::after,
+#thiago-card h2::before {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  background: linear-gradient(to right, black, #1a5aff);
+  bottom: -5px;
+  left: 0;
+  transform: scaleX(0);
+  transform-origin: right;
+  transition: transform 0.4s ease-out;
+}
+
+#austine-card h2::before,
+#emmanuel-card h2::before,
+#thiago-card h2::before {
+  top: -5px;
+  transform-origin: left;
+}
+
+#austine-card h2:hover::after,
+#austine-card h2:hover::before,
+#emmanuel-card h2:hover::after,
+#emmanuel-card h2:hover::before,
+#thiago-card h2:hover::after,
+#thiago-card h2:hover::before {
+  transform: scaleX(1);
+}
 /* media queries */
 
 
