--- a/Assignment_4/css/genres.css
+++ b/Assignment_4/css/genres.css
@@ -30,6 +30,16 @@ html {
   color: #fff;
 }
 
+/* slides images */
+.slide-img {
+  width: 100%;
+  height: 100%;
+  /* object-fit: contain; or 'contain' if you want the whole image visible without cropping */
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 0;
+}
 
 /* Button and header for the slides  in main carousel */
 .slide-content {
