--- a/Assignment_4/css/support.css
+++ b/Assignment_4/css/support.css
@@ -4,12 +4,14 @@ body {
     width: 100%;
     font-family: 'Bebas Neue', 'Poppins', sans-serif;
     font-weight: bolder;
+    
 }
 
 .container {
   position: relative;
   max-width: 50%;
-  max-height: auto;
+  /* max-height: auto; */
+  height: 100vh;
   margin: 40px auto;
   background: #fff;
   padding: 40px 70px;
@@ -155,6 +157,19 @@ textarea {
   border: 1px solid #eee;
   border-radius: 8px;
   background: #fafafa;
+}
+
+.success {
+  background: #28a745;
+}
+
+.success:hover {
+  background: #218838;
+}
+
+#footer {
+    position: fixed;
+    bottom: 0;
 }
 
 @keyframes floatUp {
