--- a/Assignment_4/css/news.css
+++ b/Assignment_4/css/news.css
@@ -13,7 +13,7 @@ body {
   color: white;
   /* padding-top: 1rem; */
   position: relative;
-  width: 100%;
+  width: 100vw;
   height: 100vh;
   /* overflow: auto; */
 }
@@ -28,10 +28,11 @@ body {
 
 .hero-left {
   flex: 2;
+  flex-wrap: wrap;
 }
 /* Title styling */
 .hero-left h1 {
-  font-size: 3rem;
+  font-size: clamp(1.5rem,2.5vw,3rem);;
   font-weight: bold;
   text-align: center;
   text-decoration: underline 0.2rem;
@@ -54,7 +55,7 @@ body {
 /* all slides */
 .slides {
   display: flex;
-  position: relative;
+  position: absolute;
   width: 100%;
   height: 100%;
   justify-content: center;
@@ -64,8 +65,8 @@ body {
 /* individual slides */
 .slide {
   position: absolute;
-  width: 400px;
-  height: 500px;
+  width: 40%;
+  height: 90%;
   border-radius: 20px;
   object-fit: cover;
   transition: transform 0.5s ease, opacity 0.5s ease, z-index 0.5s ease;
@@ -178,7 +179,7 @@ body {
 
 /* heading styling */
 .popular-stories h2 {
-  font-size: 1.25rem;
+  font-size: clamp(1rem,2.5vw,1.25rem);
   margin-bottom: 0.5rem;
   text-align: center;
   text-decoration: underline 0.2rem;
@@ -203,8 +204,8 @@ body {
 
 /* icons styling for popular list */
 .popular-list img {
-  width: 64px;
-  height: 64px;
+  width: clamp(32px, 2.5vw, 64px);
+  height: clamp(32px, 2.5vw, 64px);
   padding-right: 2rem;
 }
 
