--- a/Assignment_4/css/genres.css
+++ b/Assignment_4/css/genres.css
@@ -253,3 +253,19 @@ body {
                 0 0 20px rgba(0, 255, 255, 0.4);
   }
 }
+
+/* ------------------------------------------------------- */
+.show{
+    opacity: 1;
+    filter: blur(0);
+    transform: translateY(0);
+}
+
+.hidden {
+    opacity: 0;
+    transition: opacity 2s ease;
+}
+
+.visible {
+    opacity: 1;
+}
