--- a/Assignment_4/css/references.css
+++ b/Assignment_4/css/references.css
@@ -8,14 +8,15 @@ body {
 }
 
 .container {
-  background: white;
-  padding: 30px;
+  position: relative;
+  max-width: 50%;
+  /* max-height: auto; */
+  height: 100vh;
+  margin: 40px auto;
+  background: #fff;
+  padding: 40px 70px;
   border-radius: 12px;
-  max-width: 700px;
-  width: 100%;
-  box-shadow: 0 4px 20px rgba(0,0,0,0.15);
-  animation: fadeIn 0.5s ease;
-  height: 100%;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.1);
 }
 
 #footer {
