--- a/Assignment_4/css/references.css
+++ b/Assignment_4/css/references.css
@@ -12,10 +12,11 @@ body {
   padding: 30px;
   border-radius: 12px;
   max-width: 700px;
-  width: 100%;
+  margin: 0 auto;
   box-shadow: 0 4px 20px rgba(0,0,0,0.15);
   animation: fadeIn 0.5s ease;
   height: 100%;
+  z-index: -1000;
 }
 
 #footer {
